--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.18.2",
+    "extract-text-webpack-plugin": "^v4.0.0-alpha.0",
+    "import-glob-loader": "^1.1.0",
+    "node-sass": "^4.7.2",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
     "webpack-dev-server": "^3.1.1"
   },
