--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.28.11",
     "eslint": "^4.18.2",
     "extract-text-webpack-plugin": "^v4.0.0-alpha.0",
+    "geolib": "^2.0.24",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.1",
