--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-google-maps": "^9.4.5",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-devtools": "^3.4.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
